--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.8.2
+  firebase_core: ^0.2.5
+  firebase_auth: ^0.7.0
   rxdart: ^0.18.0
 
 dev_dependencies:
